objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <inlineHelpText>This is the address to be used for contract/agreement purposes.
Specify billing address in the license request.</inlineHelpText>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chart_of_Authority_CIO_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Authorized Representative</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Agreement_SAP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SAP Current Agreement</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Accounts (Current Agreement salesforce)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Agreement_Text__c</fullName>
        <formula>Current_Agreement__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Agreement Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce Current Agreement</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Billing_Period_For_This_Account__c</fullName>
        <defaultValue>Today()</defaultValue>
        <inlineHelpText>For billing purposes, this specifies &quot;current year&quot;.</inlineHelpText>
        <label>Billing Period</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <inlineHelpText>Account ID in SAP.</inlineHelpText>
        <label>Customer ID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Internal_Comments__c</fullName>
        <inlineHelpText>Not visible to external users</inlineHelpText>
        <label>Internal Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>License_Order_Process__c</fullName>
        <formula>If( $RecordType.DeveloperName = &quot;TCCS_Botter&quot;, 
IMAGE(&quot;/servlet/servlet.FileDownload?file=015E0000001GywM&quot;, &quot;Help&quot;, 90,700 ),
IMAGE(&quot;/servlet/servlet.FileDownload?file=015E0000001GywR&quot;, &quot;Help&quot;, 90,700 ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Order Process</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Accounts_with_Active_Agreement</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Chart_of_Authority_CIO_Contact__c</columns>
        <columns>Current_Agreement__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_Agreement__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Accounts with Active Agreement</label>
        <sharedTo>
            <roleAndSubordinates>COE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Accounts_without_Record_Type</fullName>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Accounts without Record Type</label>
        <sharedTo>
            <roleAndSubordinates>COE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Current_Agreement__c</columns>
        <columns>Current_Agreement_SAP__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_bottlers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Current_Agreement__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>TCCS Bottler</value>
        </filters>
        <label>All Bottlers</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Current_Agreement__c</columns>
        <columns>Current_Agreement_SAP__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Company</fullName>
        <active>false</active>
        <description>All other companies</description>
        <label>Company</label>
    </recordTypes>
    <recordTypes>
        <fullName>Intra_Company</fullName>
        <active>true</active>
        <label>Intra Company</label>
    </recordTypes>
    <recordTypes>
        <fullName>TCCC_Internal</fullName>
        <active>true</active>
        <description>Select this account type when Bottler Agreement is not required.</description>
        <label>Inter Company</label>
    </recordTypes>
    <recordTypes>
        <fullName>TCCS_Botter</fullName>
        <active>true</active>
        <description>Select this account type when Bottler Agreement is required</description>
        <label>3rd Party Billing</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>